# bayesian_optimization

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  results.txt
.github/workflows/: ci.yml  format.yml
bayesian_optimization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
results/: all_results.json  summary.txt
src/: __init__.py  bbob_wrapper.py  cei.py  constraint_handling.py  experiment.py  experimental_design.py  optimizer.py  penalty.py  problems.py  surrogate_model.py  visualization.py
src/bayesian_optimization/: __init__.py  barrier.py  base.py  cei.py  lagrange.py  penalty.py
src/bayesian_optimization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/experimental_design/: __init__.py  lhs.py
src/test_problems/: __init__.py  bbob_constrained.py  constrained_problems.py
src/utils/: __init__.py  experiment.py  result_saver.py  results.py  types.py  visualization.py
