[project]
name = "bayesian_optimization"
version = "0.1.0"
description = "Bayesian optimization with constraints"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "coco-experiment>=2.3.0", 
]

[project.optional-dependencies]
dev = ["pylint>=3.0.0", "pytest>=7.4.0", "black>=24.0.0"]

[tool.black]
line-length = 88
target-version = ['py310']