[project]
name = "bayesian-optimization"
version = "1.0.0"
description = "Bayesian optimization with constraints using CEI, Penalty, Lagrange, and Barrier methods"
authors = [
    {name = "Elizaveta Surda", email = "elizaveta.surda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"  # Изменено с 3.14 на 3.12
license = {text = "MIT"}
keywords = ["bayesian-optimization", "constraints", "CEI", "BO"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "pylint>=3.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']  # Изменено с py314 на py312
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "google"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
max-line-length = 88
fail-under = 8.0
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "R0913",
    "R0914",
    "C0301",  # line too long (black handles this)
]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 12

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false