[project]
name = "bayesian-optimization"
version = "0.1.0"
description = "Bayesian Optimization with constrained BBOB benchmarks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[tool.black]
line-length = 88
target-version = ['py313', 'py314']

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true